# Project_Autofill_capDon

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  HUONG_DAN_SU_DUNG.html  README.md  alembic.ini  mkdocs.yml  pyproject.toml  requirements.txt
.claude/: settings.json
alembic/: env.py
docs/: ARCHITECTURE.md  CODING_RULES.md  DATABASE.md  DECISIONS.md  FIRST_PUSH.md  GIT_WORKFLOW.md  GLOSSARY.md  MAPPING.md  SETUP_VSCODE.md  TASKS.md  TECH_STACK.md  TODO.md  WORKFLOW.md
scripts/: install_service.ps1  uninstall_service.ps1
site/: 404.html  index.html  sitemap.xml
site_docs/: architecture.md  changelog.md  context.md  how-it-works.md  index.md  installation.md  products.md  roadmap.md  troubleshoot.md  usage.md
tests/: test_aliases_loader.py  test_api.py  test_backup.py  test_classifier.py  test_cli_export.py  test_cli_rollback_replay.py  test_csv_reader.py  test_daily_report.py  test_dashboard_routes.py  test_db_exporter.py  test_db_models.py  test_db_repository.py  test_dedup.py  test_downloader.py  test_e2e_mail_fixtures.py  test_e2e_samples.py  test_email_quote.py  test_excel_filler.py  test_excel_reader.py  test_folder_router.py  test_gcn_pdf_reader.py  test_gmail_client.py  test_gui.py  test_header_detector.py  test_logger.py  test_mail_fetcher.py  test_marker.py  test_migrate_excel_to_sqlite.py  test_normalizer.py  test_ocr_reader.py  test_pdf_reader.py  test_pipeline_smoke.py  test_processed_tracker.py  test_push_to_postgres.py  test_scheduler.py  test_self_buyer.py  test_sheet_mapping.py  test_skip_filter.py  test_smoke.py  (+2 more)
(+82 files in other folders)
